# sherlock-snap

./: Dockerfile  README.md  pyproject.toml  requirements.txt
sherlock_snap/: main.py  process.py
tests/: test_sherlock_snap.py
