[tool.poetry]
name = "sherlock-snap"
version = "0.1.0"
description = ""
authors = ["jthetzel <jthetzel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyroSAR = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
